Revision history for Dist-Zilla-Plugin-ModuleBuildTiny

{{$NEXT}}

0.008     2014-10-30 16:05:29+01:00 Europe/Amsterdam
          Build.PL is now created at the correct phase (gather_files), with
          final content determined at the normal time (setup_installer)

0.007     2014-09-01 11:25:41+02:00 Europe/Amsterdam
          use strict, warnings in generated Build.PL

0.006     2014-01-13 00:54:54CET+0100 Europe/Amsterdam
          Prohibit the use of a sharedir configuration that is not supported
          Add basic testing

0.005     2013-09-08 21:41:33 Europe/Amsterdam
          Prohibit dynamic_config
          Depend on author-installed Module::Build::Tiny version

0.004     2013-03-20 15:00:32 Europe/Amsterdam
          Add «use $minimum_perl;» statement to Build.PL and minimum_perl attribute to plugin

0.003     2013-03-04 14:10:35 Europe/Amsterdam
          Require the author's version of Module::Build::Tiny by default.

0.002     2011-05-02 09:18:37 Europe/Bucharest
          Increase default minimal version of Module::Build::Tiny to 0.007 to avoid configure time issues

0.001     2011-04-29 16:38:02 Europe/Bucharest
          Initial release